# crma-api-client

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE.md  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
.circleci/commands/: restore-test-cache.yml  save-test-cache.yml
.circleci/executors/: python-medium.yml
.circleci/jobs/: build-test.yml
crma_api_client/: __init__.py  client.py  encoder.py
crma_api_client/resources/: dataset.py  query.py  user.py  util.py
tests/: setup.cfg
tests/functional/: conftest.py  secret.py  test_dataset.py  test_query.py
tests/unit/: test_example.py
tests/unit/test_resources/: test_query.py
