[tool.poetry]
name = "crma-api-client"
version = "0.5.0"
description = "CRM Analytics REST API Client"
authors = ["Jonathan Drake <jon.drake@salesforce.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/NarrativeScience/crma-api-client"
repository = "https://github.com/NarrativeScience/crma-api-client"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
backoff = "^1.11.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^6.2.2"
black = "^22.3.0"
cruft = "^2.9.0"
pytest-asyncio = "^0.18.3"
boto3 = "^1.21.38"
mypy = ">=0.942,<1"

[tool.cruft]
skip = ["pyproject.toml", "crma_api_client", "tests", "README.md", ".circleci/config.yml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
